--- a/Meeting Scheduler/html/validation/meeting_validation.html
+++ b/Meeting Scheduler/html/validation/meeting_validation.html
@@ -52,6 +52,10 @@ def validate_meeting_search(start_date, end_date, start_hour, start_minute, end_
         The first element is True if the meeting is valid, False otherwise
         The second element is None if the meeting is valid, an error message otherwise
     &#34;&#34;&#34;
+    start_hour = int(start_hour)
+    start_minute = int(start_minute)
+    end_hour = int(end_hour)
+    end_minute = int(end_minute)
     if end_date &lt; start_date:
         return False, &#34;The start date must be before the end date!&#34;
     elif end_date == start_date:
@@ -289,6 +293,10 @@ The second element is None if the meeting is valid, an error message otherwise</
         The first element is True if the meeting is valid, False otherwise
         The second element is None if the meeting is valid, an error message otherwise
     &#34;&#34;&#34;
+    start_hour = int(start_hour)
+    start_minute = int(start_minute)
+    end_hour = int(end_hour)
+    end_minute = int(end_minute)
     if end_date &lt; start_date:
         return False, &#34;The start date must be before the end date!&#34;
     elif end_date == start_date:
