--- a/Meeting Scheduler/html/importing_exporting/import_file.html
+++ b/Meeting Scheduler/html/importing_exporting/import_file.html
@@ -69,7 +69,6 @@ def transform(events):
             parts = attendee.split(&#34;;&#34;)
             name_part = parts[0]
             name = name_part.split(&#34;=&#34;)[-1]
-            print(name)
             last_name = name.split(&#34; &#34;)[-1]
             first_name = &#34; &#34;.join(name.split(&#34; &#34;)[:-1])
             if len(parts) == 1 or parts[1] == &#34;&#34; or not parts[1].startswith(&#34;X-ID&#34;):
@@ -111,10 +110,11 @@ def add_not_existing_people(participants, all_people, db_manager):
     Returns
     -------
     list
+        The new list of participants
     &#34;&#34;&#34;
     added_people = []
     for participant in participants:
-        print(participant)
+        all_people = db_manager.find_all_persons()
         sorted_ids = sorted([person[0] for person in all_people])
         id = 0
         num = 1
@@ -319,7 +319,7 @@ def import_events(file_path):
 <h2 id="returns">Returns</h2>
 <dl>
 <dt><code>list</code></dt>
-<dd>&nbsp;</dd>
+<dd>The new list of participants</dd>
 </dl></div>
 <details class="source">
 <summary>
@@ -339,10 +339,11 @@ def import_events(file_path):
     Returns
     -------
     list
+        The new list of participants
     &#34;&#34;&#34;
     added_people = []
     for participant in participants:
-        print(participant)
+        all_people = db_manager.find_all_persons()
         sorted_ids = sorted([person[0] for person in all_people])
         id = 0
         num = 1
@@ -616,7 +617,6 @@ The second element is the transformed events if the first element is True, error
             parts = attendee.split(&#34;;&#34;)
             name_part = parts[0]
             name = name_part.split(&#34;=&#34;)[-1]
-            print(name)
             last_name = name.split(&#34; &#34;)[-1]
             first_name = &#34; &#34;.join(name.split(&#34; &#34;)[:-1])
             if len(parts) == 1 or parts[1] == &#34;&#34; or not parts[1].startswith(&#34;X-ID&#34;):
